--- a/pages/publications.html
+++ b/pages/publications.html
@@ -86,17 +86,58 @@
 </ol>
 
 
+<h4>Manuscript/Preprints</h4>
+<ol start="1">    
+    <!-- <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TemT: A New Temporal Knowledge Graph Completion Method with Transformer Hawkes Process and Random Walk Aggregation Strategy</font></strong></a>.</li> -->
+    <li>Ming Liu*, Ran Liu, Ye Zhu, Hua Wang, Youyang Qu, Rongsheng Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and Wray Buntine, <a href="https://arxiv.org/pdf/2405.00704v2"><strong><font color= "#00066f">A Survey on the Real Power of ChatGPT</font></strong></a>. Arxiv
+
+    
+    <!-- <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="#"><strong><font color= "#00066f">A Short Survey on Deep Learning-Based Open Relation Extraction: Recent Advances, Resources and Perspective</font></strong></a>. Arxiv
+
+
+    <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://arxiv.org/pdf/2408.07911"><strong><font color= "#00066f">CEGRL-TKGR: A Causal Enhanced Graph Representation Learning Framework for Improving Temporal Knowledge Graph Extrapolation Reasoning</font></strong></a>. Arxiv
+
+
+    <li>Yujie Song, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="https"><strong><font color= "#00066f">Exploring Explicit and Implicit Evidence from Graph Semantic and Structure Learning for Uncertain Knowledge Graph Reasoning</font></strong></a>. Arxiv
+
+
+    <li>Yujie Song, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="https"><strong><font color= "#00066f">AgrDisEvaluator: A Benchmark for Evaluating Large Language Models on Chinese Agricultural-Centered Text Datasets</font></strong></a>. Arxiv
+
+
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, Yujie Song, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarACKGBuilder 1.0: A Carbon-Assessed Agricultural Crop Knowledge Graph System and Its Applications</font></strong></a>. Arxiv
+
+
+    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Ming Liu, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">Suicide Risk Detection Based On Context Multi-View Global Feature Learning</font></strong></a>. Arxiv
+
+
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Xianming Zhang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Ming Liu, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">A Comprehensive Review of User Suicide Risk Detection from Social Media Data: Advance Methods, Resources, and Future Directions</font></strong></a>. Arxiv
+
+
+    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Ming Liu, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">FeaLearner: A Novel Framework of Self-Assessed Feature Learning and Selection for Enhancing Suicide Risk Detection from Social Media Data</font></strong></a>. Arxiv
+
+
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Cong Jin, Yujie Song, Lizhu Xiong, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">Plan-on-Knowledge Graph 1.0: Geographic Spatio-Temporal Resource Management and Schedule System with Knowledge Graph-Guided in Forest Fire-Resource Protection Scenarios</font></strong></a>. Arxiv
+
+
+    <li>Zhenhao Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Hang Lei, Zhichao Ma, and Fengyun Zhang, <a href="http://"><strong><font color= "#00066f">CodeSimGNet: Code Similarity Detection for Various Morphological Graph Structures using Graph Neural Networks</font></strong></a>. Arxiv -->
+
+
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Cong Jin, Yujie Song, Lizhu Xiong, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">GeoSTData-Viz: Visualizing Geographic Spatio-Temporal Data Semantics from Knowledge Graph in Forest Fire-Resource Protection Scenarios</font></strong></a>. Arxiv
+
+
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, Yujie Song, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarCKGBuilder: A Novel Carbon-Assessed Crop Knowledge Graph Construction in Agricultural Domain for Carbon Effects Analytics</font></strong></a>. Arxiv
+
+
+    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and Xiangwei Lai, <a href="http://"><strong><font color= "#00066f">AgrRE: Attention Guided and Multi-Scale Graph Convolutional Network for Relation Extraction from Chinese Agricultural-Aware Text</font></strong></a>. Arxiv
+</ol>
+
+
+<hr/>
+
 <!-- 2024 year -->
 <h4>2024</h4>
 <ol start="1">
-
-    <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://"><strong><font color= "#00066f">CEGRL-TKGR: A Causal Enhanced Graph Representation Learning Framework for Improving Temporal Knowledge Graph Extrapolation Reasoning</font></strong></a>. Arxiv
-
-
-    <li>Ming Liu*, Ran Liu, Ye Zhu, Hua Wang, Youyang Qu, Rongsheng Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and Wray Buntine, <a href="https://arxiv.org/pdf/2405.00704v2"><strong><font color= "#00066f">A Survey on the Real Power of ChatGPT</font></strong></a>. Arxiv
-
-
-    <li>Lizhu Xiong, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://"><strong><font color= "#00066f">TKGR-PRRCL: Enhance Temporal Knowledge Graph Reasoning with Self-Weighted Path Representation and Relation-Level Contrastive Learning</font></strong></a>. The 13th CCF International Conference on Natural Language Processing and Chinese Computing (NLPCC). Hangzhou (<a href="http://tcci.ccf.org.cn/conference/2024/"><strong><u><font color="#874e26">NLPCC-24</font></u></strong></a>). China, November 1-3, 2024. (CCF-C)
+    <li>Lizhu Xiong, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://"><strong><font color= "#00066f">TKGR-PRRCL: Enhance Temporal Knowledge Graph Reasoning with Weighted Path Representation and Supervised Contrastive Learning</font></strong></a>. The 13th CCF International Conference on Natural Language Processing and Chinese Computing (NLPCC). Hangzhou (<a href="http://tcci.ccf.org.cn/conference/2024/"><strong><u><font color="#874e26">NLPCC-24</font></u></strong></a>). China, November 1-3, 2024. (CCF-C)
 </ol>
 
 
@@ -104,7 +145,7 @@
 <hr align="left" width="100%">
 <h4>2023</h4>
 <ol start="1">
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese)</li>
 
 
     <!-- <li>Xiaoshi Wang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Guangyu Zhang, Zhuping Ding, Lirong He, <a href=""><strong><font color= "#00066f">An Adaptive Clustering Centered-Oriented Projection Method for Hypernym-Hyponym Relation Identification</font></strong></a>. </li> -->
@@ -121,10 +162,7 @@
 <hr align="left" width="100%">
 <h4>2022</h4>
 <ol start="1"> 
-    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and Wenjie Li, <a href="#"><strong><font color= "#00066f">A Short Survey on Deep Learning-Based Open Relation Extraction: Recent Advances, Resources and Perspective</font></strong></a>. (Under Review)</li>
-
-
-    <li> <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://dblp.uni-trier.de/pers/hd/z/Zhang:Hekai" target="_blank">Hekai Zhang</a>, <a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, and <a href="https://cqcam.cqnu.edu.cn/info/2008/3152.htm" target="_blank">Jiatian Pi</a>, <a href="#"><strong><font color= "#00066f">Semantic-Path Guided Graph Neural Network for Heterogeneous Graph Embedding</font></strong></a>. Mathmetics (<a href="https://www.mdpi.com/journal/mathematics"><strong><u><font color="#874e26">Mathmetics</font></u></strong></a>). (Minor for Accepted)</li>
+    <li> <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://dblp.uni-trier.de/pers/hd/z/Zhang:Hekai" target="_blank">Hekai Zhang</a>, and <a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, <a href="#"><strong><font color= "#00066f">Semantic-Path Guided Graph Neural Network for Heterogeneous Graph Embedding</font></strong></a>. Mathmetics (<a href="https://www.mdpi.com/journal/entropy/special_issues/6837W6XEIV"><strong><u><font color="#874e26">Entropy</font></u></strong></a>). (Minor for Accepted)</li>
 
 
     <li>Hao Zhou, Zekai Chen, Yun Liu, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Wenqi Ren, and Hailing Xiong, <a href="https://www.sciencedirect.com/science/article/pii/S0950705123001600"><strong><font color= "#00066f">Physical-priors-guided DehazeFormer</font></strong></a>. Knowledge-Based Systems (<a href="https://www.journals.elsevier.com/knowledge-based-systems"><strong><u><font color="#874e26">KBS</font></u></strong></a>). (IF = 8.038, CCF-C, JCR Q1, 中科院 Q1)</li>
@@ -239,21 +277,12 @@ Journal of Computer Applications (<a href="http://www.joca.cn/CN/volumn/home.sht
     <li> (SELECTED) <a href="https://scholar.google.com/citations?hl=en&user=gF0H9nEAAAAJ" target="_blank">Zenglin Xu</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="https://dblp.uni-trier.de/pers/hd/w/Wang:Yafang" target="_blank">Yafang Wang</a>, <a href="http://www.juestc.uestc.edu.cn/cn/article/doi/10.3969/j.issn.1001-0548.2016.04.012"><strong><font color= "#00066f">Review on Knowledge Graph Techniques</font></strong></a>. Journal of University of Electronic Science and Technology of China (<a href="http://www.juestc.uestc.edu.cn/"><strong><u><font color="#874e26">JUESTC</font></u></strong></a>). (In Chinese)
 </ol>
 
-<hr>
+<hr/>
 
-
-<h4>Manuscript/Preprints</h4>
-<ol start="1">    
-    <!-- <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TemT: A New Temporal Knowledge Graph Completion Method with Transformer Hawkes Process and Random Walk Aggregation Strategy</font></strong></a>.</li> -->
-</ol>
-
-
-
-<hr>
 
 <h4>Patents</h4>
 <ol start="1">
-    <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TemT: A New Temporal Knowledge Graph Completion Method with Transformer Hawkes Process and Random Walk Aggregation Strategy</font></strong></a>, 2023.05.28, China (Submitted)</li>
+    <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TKGR-RHETNE: A New Temporal Knowledge Graph Reasoning Model via Jointly Modeling Relevant Historical Event and Temporal Neighborhood Event Context</font></strong></a>, 2023.05.28, China (Submitted)</li>
 
 
     <li><a href="https://scholar.google.com/citations?hl=en&user=gF0H9nEAAAAJ" target="_blank">Zenglin Xu</a>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://csr.swufe.edu.cn/info/1042/1672.htm" target="_blank">Bin Liu</a>, <a href="https://dblp.uni-trier.de/pers/hd/l/Li:Guangxi" target="_blank">Guangxi Li</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://dblp.uni-trier.de/pers/hd/w/Wang:Yafang" target="_blank">Yafang Wang</a>, <a href="https://cprs.patentstar.com.cn/Search/Detail?ANE=7BEA9GEB9CICAEHA6FAA9EFAAFHAEHHA9BGGCGFADHFA6AEA"><strong><font color= "#00066f">A Method of Knowledge Base Completion by Variational Bayesian Neural Tensor Decomposition</font></strong></a> (No. ZL201610578882.9), 2018.09.04, China (Authorized)</li>
