--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -3924,6 +3924,11 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/7jkDo8DFFIZ6Q3d3PIiO3A" target="_blank">小时级的长视频生成！浙江大学发布MovieDreamer，AI电影时代到来了？</a>
     | 
+    <!-- 2024.08.22 -->
+    <a href="https://mp.weixin.qq.com/s/YlpE97X5pPnu8QliOcszxw" target="_blank">难倒了Midjourney和FLux的问题，被它解了！AI生图的终结者杀出来了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/EhAtDHzKAk-voyDTC-Fa1w" target="_blank">《黑神话：悟空》火了，英伟达赚了</a>
+    |
 </br>
 </br>
 AI论文: 
