--- a/pages/publications.html
+++ b/pages/publications.html
@@ -109,7 +109,7 @@
     <li>Zhenhao Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Hang Lei, Zhichao Ma, and Fengyun Zhang, <a href="http://"><strong><font color= "#00066f">CodeSimGNet: Code Similarity Detection for Various Morphological Graph Structures using Graph Neural Networks</font></strong></a>. Arxiv -->
 
 
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Hao Wang, <a href="https://fangyixiang.github.io/index.html" target="_blank">Yixiang Fang</a>, <a href="http://"><strong><font color= "#00066f">Special Issue of Information Network Mining and Applications</font></strong></a>. Arxiv
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Hao Wang, <a href="https://fangyixiang.github.io/index.html" target="_blank">Yixiang Fang</a>, <a href="http://"><strong><font color= "#00066f">Special Issue of Information Network Mining and Applications</font></strong></a>. Arxiv
 
 
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Cong Jin, Yujie Song, Lizhu Xiong, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">GeoSTData-Viz: Visualizing Geographic Spatio-Temporal Data Semantics from Knowledge Graph in Forest Fire-Resource Protection Scenarios</font></strong></a>. Arxiv
