--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -266,6 +266,9 @@
     |
     <a href="" target="_blank">ICSOC</a>
     |
+<!-- Computer-Human Interaction - B-->
+    <a href="https://cscw.acm.org/2025/" target="_blank">CSCW</a>
+    |
 <!-- software engineering - B-->
     <a href="" target="_blank">DASFAA</a>
     |
@@ -6051,6 +6054,9 @@ Service Computation Field：
 <br />
     <a href="https://computer.ytu.edu.cn/info/1018/4677.htm" target="_blank">Yingjie Wang</a>
     | 
+    <!-- Tianjin University -->
+    <a href="https://computer.ytu.edu.cn/info/1018/4677.htm" target="_blank">Xiao Xue</a>
+    |
   <br />
   <br />
 Speech and Music Intelligence Field：
