--- a/pages/publications.html
+++ b/pages/publications.html
@@ -144,7 +144,7 @@
 <!-- 2024 year -->
 <h4>2024</h4>
 <ol start="1">
-    <li>Lizhu Xiong, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://"><strong><font color= "#00066f">TKGR-PRRCL: Enhance Temporal Knowledge Graph Reasoning with Weighted Path Representation and Supervised Contrastive Learning</font></strong></a>. The 13th CCF International Conference on Natural Language Processing and Chinese Computing (NLPCC). Hangzhou (<a href="http://tcci.ccf.org.cn/conference/2024/"><strong><u><font color="#874e26">NLPCC-24</font></u></strong></a>). China, November 1-3, 2024. (CCF-C)
+    <li>Lizhu Xiong, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://"><strong><font color= "#00066f">TKGR-GPRSCL: Enhance Temporal Knowledge Graph Reasoning with Graph Structure-Aware Path Representation and Supervised Contrastive Learning</font></strong></a>. The 13th CCF International Conference on Natural Language Processing and Chinese Computing (NLPCC). Hangzhou (<a href="http://tcci.ccf.org.cn/conference/2024/"><strong><u><font color="#874e26">NLPCC-24</font></u></strong></a>). China, November 1-3, 2024. (CCF-C)
 </ol>
 
 
