--- a/pages/activities.html
+++ b/pages/activities.html
@@ -241,14 +241,12 @@
     </li>
 
 
-    <li><strong>Invited Reviewer</strong>, CAAI Transactions on Intelligence Technology (<a href="https://ietresearch.onlinelibrary.wiley.com/journal/24682322"><strong><u><font color="#874e26">CAAI-TIT</font></u></strong></a>)</li>
-
-    
-    <li><strong>Invited Reviewer</strong>, Neurocomputing (<a href="https://www.sciencedirect.com/journal/neurocomputing"><strong><u><font color="#874e26">Neurocomputing</font></u></strong></a>)</li>
-
-
     <li><strong>Invited Reviewer</strong>, Knowledge-Based Systems (<a href="http://www.jou
         rnals.elsevier.com/"><strong><u><font color="#874e26">KBS</font></u></strong></a>)</li>
+
+
+<!-- 2024.09.23 收到的审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, Information Sciences (<a href="https://www.sciencedirect.com/journal/information-sciences"><strong><u><font color="#874e26">IS</font></u></strong></a>)</li>
 
 
 <!-- 2024.07.24 收到的审稿邀请 -->
@@ -264,6 +262,12 @@
 
 
     <li><strong>Invited Reviewer</strong>, Information Processing and Management (<a href="https://www.sciencedirect.com/journal/information-processing-and-management"><strong><u><font color="#874e26">IPM</font></u></strong></a>)</li>
+
+
+    <li><strong>Invited Reviewer</strong>, CAAI Transactions on Intelligence Technology (<a href="https://ietresearch.onlinelibrary.wiley.com/journal/24682322"><strong><u><font color="#874e26">CAAI-TIT</font></u></strong></a>)</li>
+
+    
+    <li><strong>Invited Reviewer</strong>, Neurocomputing (<a href="https://www.sciencedirect.com/journal/neurocomputing"><strong><u><font color="#874e26">Neurocomputing</font></u></strong></a>)</li>
 
 
     <li><strong>Invited Reviewer</strong>, Pattern Recognition Letters (<a href="https://www.journals.elsevier.com/pattern-recognition-letters/"><strong><u><font color="#874e26">PR Letters</font></u></strong></a>)</li>
@@ -300,7 +304,7 @@
 
 
 <!-- 2023.04.28 收到的审稿邀请 -->
-    <li><strong>Invited Reviewer</strong>, Neurocomputing (<a href="https://www.sciencedirect.com/journal/neurocomputing"><strong><u><font color="#874e26">Neurocomputing</font></u></strong></a>)</li>
+    <!-- <li><strong>Invited Reviewer</strong>, Neurocomputing (<a href="https://www.sciencedirect.com/journal/neurocomputing"><strong><u><font color="#874e26">Neurocomputing</font></u></strong></a>)</li> -->
 
 
     <!-- \item {计算机研究与发展}  -->
