--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Sheng's interest lies in <b>textual data mining</b>, <b>representation learning 
 <br></p>
 
 <p>
-Sheng has published more than 20 papers in major international conferences including IJCAI, ECML-PKDD, APWeb-WAIM, and journals like Information Sciences, WWW Journal, Cognitive Computation, Applied Intelligence. He has served as a PC member for many venues such as IJCAI (24), SDM (24), DASFAA (24/23), ECML-PKDD (22), ICONIP (24/22), APWeb-WAIM (24/23/21/20), CCKS (22), CCL (22), ADMA (22), DaMi (22), ICISC (23), and a reviewer for venues such as ACM MM (24), IJCAI (24), SDM (24), DASFAA (23), ECML-PKDD (22), ADMA (23), MMM (25), ICONIP (24/22), APWeb-WAIM (24/23/22/21/20/19), CCKS (22), CCL (23/22), ADMA (22), DaMi (22), ICISC (23), RSBD (19), CCF-ICAI (18), AAAI (16), CCKS (16), CCPR (16) as well as journals such as CAAI Transactions on Intelligence Technology, Neurocomputing, Knowledge-Based Systems, Computers and Electronics in Agriculture, Expert Systems With Applications, Engineering Applications of Artificial Intelligence, Information Processing and Management, Pattern Recognition Letters, Applied Sciences, Entropy, IEEE Access, Data and Information Management, Journal of Computer Research and Development, Acta Electronica Sinica, etc.
+Sheng has published more than 20 papers in major international conferences including IJCAI, ECML-PKDD, APWeb-WAIM, and journals like Information Sciences, WWW Journal, Cognitive Computation, Applied Intelligence. He has served as a PC member for many venues such as IJCAI (24), SDM (24), DASFAA (24/23), ECML-PKDD (22), ICONIP (24/22), APWeb-WAIM (24/23/21/20), CCKS (22), CCL (22), ADMA (22), DaMi (22), ICISC (23), and a reviewer for venues such as ACM MM (24), IJCAI (24), SDM (24), DASFAA (23), ECML-PKDD (22), ADMA (23), MMM (25), ICONIP (24/22), APWeb-WAIM (24/23/22/21/20/19), CCKS (22), CCL (23/22), ADMA (22), DaMi (22), ICISC (23), RSBD (19), CCF-ICAI (18), AAAI (16), CCKS (16), CCPR (16) as well as journals such as Knowledge-Based Systems, Information Sciences, Computers and Electronics in Agriculture, Expert Systems With Applications, Engineering Applications of Artificial Intelligence, Information Processing and Management, CAAI Transactions on Intelligence Technology, Neurocomputing, Pattern Recognition Letters, Applied Sciences, Entropy, IEEE Access, Data and Information Management, Journal of Computer Research and Development, Acta Electronica Sinica, etc.
 <br></p>
 
 Check out Sheng's up-to-date CV for more details.
@@ -212,6 +212,9 @@ Check out Sheng's up-to-date CV for more details.
   <a href="https://mp.weixin.qq.com/s/03b0A9dzFTbVbbcSM7FHhQ" target="_blank">关于指挥与控制领域高质量科技期刊分级目录评审结果的公示</a>  
   |
   <a href="http://www.letpub.com.cn/index.php?page=journalapp&view=search" target="_blank">最新SCI期刊查询及投稿分析系统</a>
+  |
+  <a href="https://www.ccf.org.cn/Membership/Individual_member/Only/2024-09-23/830234.shtml" target="_blank">2024年CCF新晋杰出会员名单公布</a>
+  |
   <br />
   <a href="https://mp.weixin.qq.com/s/K8R4PqW1utEnahpTvXgLFQ" target="_blank">2020年NLP重要国际会议时间（更新版）</a>
   |
