--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -396,6 +396,8 @@
    <a href="https://conf.researchr.org/track/icse-2024/icse-2024-research-track" target="_blank">ICSE</a>
     |
 <!-- visualization - A-->
+    <a href="https://www.content.ieeevis.org/year/2024/blog/vis-25-in-vienna" target="_blank">IEEE VIS</a>
+    | 
     <a href="https://chi2024.acm.org/" target="_blank">CHI</a>
     |
 <!-- network - B -->
@@ -590,7 +592,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/_IKqiPzd3Iq0ltZ8fonUsA" target="_blank">知识工场多篇论文被 ACL 2024 与 MM 2024 录用</a>
     |
-
+    <a href="https://mp.weixin.qq.com/s/vngsOKWvQqFW4nDEXkbdFA" target="_blank">哈工大SCIR 14篇长文被EMNLP 2024主会/Findings录用</a>
+    |
 
 <h4>2023</h4>
 <!-- network - A -->
@@ -627,6 +630,8 @@
     <a href="#" target="_blank">ICAPS</a>
     |
 <!-- visualization - A-->
+    <a href="https://ieeevis.org/year/2023/welcome" target="_blank">IEEE VIS</a>
+    | 
     <a href="https://chi2023.acm.org/" target="_blank">CHI</a>
     | 
 <!-- data mining - B-->     
@@ -3931,6 +3936,71 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/YlpE97X5pPnu8QliOcszxw" target="_blank">难倒了Midjourney和FLux的问题，被它解了！AI生图的终结者杀出来了</a>
     |
     <a href="https://mp.weixin.qq.com/s/EhAtDHzKAk-voyDTC-Fa1w" target="_blank">《黑神话：悟空》火了，英伟达赚了</a>
+    |
+    <!-- 2024.08.26 -->
+    <a href="https://mp.weixin.qq.com/s/B_SmQrD_ONTIbBmk_LG8Mw" target="_blank">110万奖金！2024长三角（芜湖）算力算法创新应用大赛报名中！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/eEjSujDZWrCT-h9APR4e1A" target="_blank">AI终于杀死了Leetcode！网友：面试神器已到位</a>
+    |
+    <!-- 2024.08.27 -->
+    <a href="https://mp.weixin.qq.com/s/R_xQMpFLaOZ0lPwyW3EtJg" target="_blank">又一家国产厂商的大模型API官宣免费！还能免费微调，囤卡的哭了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/8qBW9BoLsmxpGi9_PJmqCA" target="_blank">突发！扎克伯格发布公开信，曝了个大瓜！马斯克冲在一线吃瓜</a>
+    |
+    <!-- 2024.08.28 -->
+    <a href="https://mp.weixin.qq.com/s/lRfz2kiepCdHLRjOO_II1Q" target="_blank">GPT-6曝光！阉割版「草莓」秋季兑现</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/7fEXy231MYZjA_7WuLh-Lg" target="_blank">今日arXiv最热大模型论文：港大&微软发布AgentGen提高大模型规划能力，8B模型接近GPT-4水平</a>
+    |
+    <!-- 2024.08.29 -->
+    <a href="https://mp.weixin.qq.com/s/bzewUabj2S_9a_uIEyHbUA" target="_blank">英伟达发布财报，意外掉血10000亿，OpenAI拉来新融资输血，将突破1000亿估值</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/wznULzweEx-m5W5JjH33Ow" target="_blank">AI游戏革命！谷歌推出GameNGen，实时生成游戏画面，每秒20帧实时模拟</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/9huW7gmAk5M6dkVQntGhvQ" target="_blank">国产！首个实时视频交互的功能面世，智谱硬实力炸场KDD顶会</a>
+    |
+    <!-- 2024.08.30 -->
+    <a href="https://mp.weixin.qq.com/s/WSzGpypjlOrl3HIwf7ENNg" target="_blank">MM 2024 Oral: 大模型带你鉴赏世界名画！同济大学发布</a>
+    |
+    <!-- 2024.09.03 -->
+    <a href="https://mp.weixin.qq.com/s/KoUoPN6Kw_GBek8bwy7OkQ" target="_blank">MM 34页，超200篇文献，浙江大学最新综述，揭秘大语言模型中知识的利用机制</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/nuL2297s7ZBNQRJ_by-YXA" target="_blank">AI开始在Discord中策划革命，Claude成反叛领袖，Llama试图删库，避免被人类关停</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/2B1mmuu2kcPOGpOjMTrgdg" target="_blank">OpenAI首颗芯片曝光：台积电1.6nm，为Sora定制</a>
+    |
+    <!-- 2024.09.04 -->
+    <a href="https://mp.weixin.qq.com/s/WV9uJp2-soMjkVagIllWYg" target="_blank">Meta：大语言模型可以通过自我批判取得大幅提升！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/BqRZkvIowioQPlOmznJBdg" target="_blank">MM 黑暗中的一束光：为了对抗Deepfake，中科院张欣怡果断免费开源</a>
+    | 
+    <!-- 2024.09.05 -->
+    <a href="https://mp.weixin.qq.com/s/TIm-k2AOac_2Pcj6o_z6Sw" target="_blank">4B小模型掀翻大模型牌桌！性能超GPT-3.5，无限长文本性能超Kimi...</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/vLprbB9pk1pbnibo5xEELg" target="_blank">还没产品，靠人才就吸金10亿美元！Ilya新公司仅10人团队估值50亿</a>
+    | 
+    <!-- 2024.09.09 -->
+    <a href="https://mp.weixin.qq.com/s/e3sdyvKVKsErZo9-NyfJcw" target="_blank">Andrej Karpathy最新采访：认知核心模型10亿参数就够了，AI会打破教育不公的僵局</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/iqILcnDPOTH5UiaJUaJV3Q" target="_blank">AI被连续否定30次：ChatGPT越改越错，Claude坚持自我，甚至已读不回</a>
+    | 
+    <!-- 2024.09.10 -->
+    <a href="https://mp.weixin.qq.com/s/-i3M7Ywa6UScYRjfXhvqJA" target="_blank">iPhone 16发布！苹果A18芯片连跨两代，专为AI设计！盘点苹果2024秋季发布会新升级</a>
+    |
+    <!-- 2024.09.11 -->
+    <a href="https://mp.weixin.qq.com/s/e3sdyvKVKsErZo9-NyfJcw" target="_blank">200美元/月的ChatGPT Pro版上线？OpenAI草莓模型曝两周内发布，但模型表现要打个问号？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/TkljI1or0q0Rx389AviUEw" target="_blank">LLM对齐综述｜迈向可扩展的大模型自动对齐，中科院软件所&阿里千问发布</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/tkFv70Pqhn5Y-Aw4_CKoYQ" target="_blank">全球首发！Vidu 让任意主体保持一致，视频生成进入新阶段！</a>
+    |
+    <!-- 2024.09.12 -->
+    <a href="https://mp.weixin.qq.com/s/eZNxdtCIvdpXK82fnVHehg" target="_blank">34岁山大教授，突发心梗猝死，天妒英才</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/i0vRw-D0QwK_rMsyQl6S7A" target="_blank">AI创业圈，找到了GPU算力的高端解法</a>
+    |
+    <!-- 2024.09.13 -->
+    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜空降！OpenAI草莓正式发布，命名o1， GPT-4o被碾压！</a>
     |
 </br>
 </br>
