--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -270,7 +270,7 @@
     <a href="https://cscw.acm.org/2025/" target="_blank">CSCW</a>
     |
 <!-- software engineering - B-->
-    <a href="" target="_blank">DASFAA</a>
+    <a href="https://dasfaa2025.github.io/" target="_blank">DASFAA</a>
     |
     <a href="" target="_blank">ETAPS</a>
     |
@@ -594,7 +594,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/vngsOKWvQqFW4nDEXkbdFA" target="_blank">哈工大SCIR 14篇长文被EMNLP 2024主会/Findings录用</a>
     |
-
+    <a href="https://mp.weixin.qq.com/s/TIdJkNoCOC9V9-nhshtyMA" target="_blank">哈工大SCIR 9篇论文被 NeurIPS 2024录用</a>
+    |
 <h4>2023</h4>
 <!-- network - A -->
     <a href="https://infocom2023.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
@@ -4001,6 +4002,39 @@ ChatGPT:
     |
     <!-- 2024.09.13 -->
     <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜空降！OpenAI草莓正式发布，命名o1， GPT-4o被碾压！</a>
+    |
+    <!-- 2024.09.19 -->
+    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    |
+    <!-- 2024.09.21 -->
+    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    |
+    <!-- 2024.09.23 -->
+    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    |
+    <!-- 2024.09.24 -->
+    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    |
+    <!-- 2024.09.25 -->
+    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    |
+    <!-- 2024.09.26 -->
+    <a href="https://mp.weixin.qq.com/s/2rK59hPV8C_PeDsT8Ii73w" target="_blank">张俊林详细拆解o1：OpenAI o1完整训练过程逆向推演</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/kC_4Fsh4FKrsP0WzL37RHg" target="_blank">突发！OpenAI CTO离职，同日奥特曼被曝将获得股权</a>
+    |
+    <!-- 2024.09.27 -->
+    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">三只羊卢总的醉酒录音，说方言吐脏话，AI合成能到吗</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/saG4LFq97WA356RdaCcQvQ" target="_blank">LLM 我们距离应用还差什么？</a>
     |
 </br>
 </br>
