--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -4004,30 +4004,30 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜空降！OpenAI草莓正式发布，命名o1， GPT-4o被碾压！</a>
     |
     <!-- 2024.09.19 -->
-    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    <a href="https://mp.weixin.qq.com/s/EpLFd3ZRICxhbGyPLsX2bg" target="_blank">AI美女屠版小红书火了，被当真人推流，颜值博主慌了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/MFGAeiE_dSAj-E1Pxtu6fg" target="_blank">英伟达Jim Fan预测：未来2~3年机器人将迎来“GPT-3时刻”</a>
     |
     <!-- 2024.09.21 -->
-    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    <a href="https://mp.weixin.qq.com/s/tDv4s2yjpAdulyKI4nvuGA" target="_blank">读博对心理有持续负面影响？终于有论文证实了！确实是真的！</a>
     |
-    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    <a href="https://mp.weixin.qq.com/s/r5HINwOcjb9X_kGHWtiIvw" target="_blank">大模型的威力，远不只是聊天框</a>
     |
     <!-- 2024.09.23 -->
-    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">西安一高校老师实名公开举报！397页PDF痛诉同院老师学术不端，评审推诿包庇</a>
     |
-    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    <a href="https://mp.weixin.qq.com/s/EKuPbbecY6ETRF90RskqsQ" target="_blank">o1的提示词：简单才是王道！</a>
     |
     <!-- 2024.09.24 -->
-    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
-    |
-    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    <a href="https://mp.weixin.qq.com/s/NhcTravDbOroPWT4500hkA" target="_blank">Sam Altman罕见发长文：ASI终将至，准备好迎接“智能时代”吧！深度学习是有效路径</a>
     |
     <!-- 2024.09.25 -->
-    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    <a href="https://mp.weixin.qq.com/s/iVg0AVhBUlvFuFOkzpRcsA" target="_blank">OpenAI 「Her」高级语音功能全开放！重庆话、北京儿话都贼溜！</a>
     |
-    <a href="https://mp.weixin.qq.com/s/P4eM7o0z-NlAyXnNOmK8GA" target="_blank">深夜</a>
+    <a href="https://mp.weixin.qq.com/s/UYzIFZdRjVu_in88xEqahg" target="_blank">我薅到了63小时的3090卡</a>
     |
     <!-- 2024.09.26 -->
-    <a href="https://mp.weixin.qq.com/s/2rK59hPV8C_PeDsT8Ii73w" target="_blank">张俊林详细拆解o1：OpenAI o1完整训练过程逆向推演</a>
+    <a href="https://mp.weixin.qq.com/s/EKuPbbecY6ETRF90RskqsQ" target="_blank">张俊林详细拆解o1：OpenAI o1完整训练过程逆向推演</a>
     |
     <a href="https://mp.weixin.qq.com/s/kC_4Fsh4FKrsP0WzL37RHg" target="_blank">突发！OpenAI CTO离职，同日奥特曼被曝将获得股权</a>
     |
@@ -4036,6 +4036,12 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/saG4LFq97WA356RdaCcQvQ" target="_blank">LLM 我们距离应用还差什么？</a>
     |
+    <!-- 2024.09.28 -->
+    <a href="https://mp.weixin.qq.com/s/f4edkRufzc6bCdLQd3W-ow" target="_blank">OpenAI员工流失的背后：地盘争夺、倦怠、薪酬要求</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/nsentoI1LvNGW_AvKjrzlg" target="_blank">OpenAI财务文件曝光，ChatGPT要涨价了！！</a>
+    |
+
 </br>
 </br>
 AI论文: 
