--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="https://www.ccf.org.cn/ccftjgjxskwml/" target="_blank">CCF发布计算领域高质量科技期刊分级目录</a>
   |
+  <a href="https://mp.weixin.qq.com/s/6fBu6bt6Z7fgZDw-mhAM2w" target="_blank">CCF24场会议被中国科协《重要学术会议指南(2024)》收录</a>
+  |
   <a href="https://www.cie.org.cn/list_43/11070.html" target="_blank">中国电子学会关于《电子技术、通信技术领域高质量科技期刊分级目录（征求意见稿）》和《计算机技术领域高质量科技期刊分级目录（征求意见稿）》的公示</a>
   |
   <a href="https://mp.weixin.qq.com/s/VgEHWs9b26W6H1wzQsXYFg" target="_blank">CCF18场会议被中国科协《重要学术会议指南 (2023)》收录</a>
