--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -319,7 +319,7 @@
     |
     <a href="" target="_blank">Internetware</a>
     |
-    <a href="" target="_blank">QRS</a>
+    <a href="https://qrs25-temp.techconf.org/" target="_blank">QRS</a>
     |     
     <a href="" target="_blank">APSEC</a>
     |
@@ -595,6 +595,8 @@
     <a href="https://mp.weixin.qq.com/s/vngsOKWvQqFW4nDEXkbdFA" target="_blank">哈工大SCIR 14篇长文被EMNLP 2024主会/Findings录用</a>
     |
     <a href="https://mp.weixin.qq.com/s/TIdJkNoCOC9V9-nhshtyMA" target="_blank">哈工大SCIR 9篇论文被 NeurIPS 2024录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/8oJyRx6t96KGnqXY1JgzCg" target="_blank">知识工场多篇论文被 EMNLP 2024 录用</a>
     |
 <h4>2023</h4>
 <!-- network - A -->
@@ -4036,12 +4038,16 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/saG4LFq97WA356RdaCcQvQ" target="_blank">LLM 我们距离应用还差什么？</a>
     |
-    <!-- 2024.09.28 -->
+    <!-- 2024.09.29 -->
     <a href="https://mp.weixin.qq.com/s/f4edkRufzc6bCdLQd3W-ow" target="_blank">OpenAI员工流失的背后：地盘争夺、倦怠、薪酬要求</a>
     |
     <a href="https://mp.weixin.qq.com/s/nsentoI1LvNGW_AvKjrzlg" target="_blank">OpenAI财务文件曝光，ChatGPT要涨价了！！</a>
     |
-
+    <!-- 2024.09.30 -->
+    <a href="https://mp.weixin.qq.com/s/bFwCBPqwYPgsGl5k49YIsw" target="_blank">今天不止是A股疯，这家国产大模型也疯了！AI人：1亿小目标已实现</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/h9L4iKgwZWEqcu-VKmvqKA" target="_blank">被Karpathy誉为“蕴藏着类似ChatGPT的机会的AI产品Notebook LM”，它到底做对了什么？</a>
+    |
 </br>
 </br>
 AI论文: 
