--- a/pages/activities.html
+++ b/pages/activities.html
@@ -241,8 +241,11 @@
     </li>
 
 
-    <li><strong>Invited Reviewer</strong>, Knowledge-Based Systems (<a href="http://www.jou
-        rnals.elsevier.com/"><strong><u><font color="#874e26">KBS</font></u></strong></a>)</li>
+<!-- 2024.10.17 收到Kaizhu Huang审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, Neural Networks (<a href="https://www.sciencedirect.com/journal/neural-networks"><strong><u><font color="#874e26">NN</font></u></strong></a>)</li>
+
+
+    <li><strong>Invited Reviewer</strong>, Knowledge-Based Systems (<a href="http://www.journals.elsevier.com/"><strong><u><font color="#874e26">KBS</font></u></strong></a>)</li>
 
 
 <!-- 2024.09.23 收到的审稿邀请 -->
