--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -202,7 +202,7 @@
     <a href="" target="_blank">SIGIR</a>
     |
 <!-- Knowledge engineering - A-->
-    <a href="" target="_blank">ACL</a>
+    <a href="https://2025.aclweb.org/" target="_blank">ACL</a>
     |
     <a href="" target="_blank">ICDCS</a>
     |
@@ -597,6 +597,10 @@
     <a href="https://mp.weixin.qq.com/s/TIdJkNoCOC9V9-nhshtyMA" target="_blank">哈工大SCIR 9篇论文被 NeurIPS 2024录用</a>
     |
     <a href="https://mp.weixin.qq.com/s/8oJyRx6t96KGnqXY1JgzCg" target="_blank">知识工场多篇论文被 EMNLP 2024 录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/liZ3sVwrl2JV1b-4l7AOWA" target="_blank">天津大学自然语言处理实验室4篇论文被NeurIPS 2024和EMNLP 2024接受！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Fq-qk7268ErAe4_UrFPn2w" target="_blank">THUIR师生论文获CIKM 2024录用</a>
     |
 <h4>2023</h4>
 <!-- network - A -->
@@ -4048,6 +4052,28 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/h9L4iKgwZWEqcu-VKmvqKA" target="_blank">被Karpathy誉为“蕴藏着类似ChatGPT的机会的AI产品Notebook LM”，它到底做对了什么？</a>
     |
+    <!-- 2024.10.02 -->
+    <a href="https://mp.weixin.qq.com/s/nfZNZA54zG_knA2_6vidLA" target="_blank">OpenAI 开发者大会！实时语音功能有API了，GPT-4o支持多模态微调，上下文cache功能上线</a>
+    |
+    <!-- 2024.10.03 -->
+    <a href="https://mp.weixin.qq.com/s/49iHliH-3CTe203MmXrW-Q" target="_blank">破纪录！OpenAI成为史上第一家估值万亿元的AI公司！独家融资协议：“别投对手公司”</a>
+    |
+    <!-- 2024.10.24 -->
+    <a href="https://mp.weixin.qq.com/s/pl-8KFXN7z_JM2EdGKUHQQ" target="_blank">Character AI被起诉！14岁青少年自杀，AI陪伴何去何从</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/hdnwogPfeOwHAFsGL8EwUQ" target="_blank">0.11秒出图！OpenAI发布sCM模型，提速50倍，作者来自清华</a>
+    |
+    <!-- 2024.10.25 -->
+    <a href="https://mp.weixin.qq.com/s/C54sX2qOceLg6NqOIodVmg" target="_blank">震惊！AI竟然学会了100种撒娇方式，让我分不清是人是鬼</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/oIkaL_tBbqi05aGD8Qbc9A" target="_blank">OpenAI科学家震惊TED大会：让AI模型多思考20秒，提升10万倍性能！</a>
+    |
+    <!-- 2024.10.26 -->
+    <a href="https://mp.weixin.qq.com/s/49iHliH-3CTe203MmXrW-Q" target="_blank">开源一夜崩塌：Linux无理由除名俄罗斯开发者。我们该醒了？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/jKYCy8fqM2XdeECefBripg" target="_blank">LLM等价于众包，只是在输出「网络共识」！哈佛大学最新报告深挖大模型幻觉！</a>
+    |
+
 </br>
 </br>
 AI论文: 
