--- a/pages/publications.html
+++ b/pages/publications.html
@@ -107,7 +107,7 @@
 
 
 
-    <li>Lizhu Xiong, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">Enhancing Temporal Knowledge Graph Reasoning with Graph Structural Representation and Supervised Contrastive Learning</font></strong></a>. Arxiv
+    <li>Lizhu Xiong, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">Enhancing Temporal Knowledge Graph Reasoning with Graph Structural Representation and Supervised Contrastive Learning</font></strong></a>. Arxiv
 
 
     <li>Zhenhao Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Zhichao Ma, and Fengyun Zhang, <a href="http://"><strong><font color= "#00066f">CodeSimGNet: Code Similarity Detection for Various Morphological Graph Structures using Graph Neural Networks</font></strong></a>. Arxiv 
@@ -148,7 +148,7 @@
 <!-- 2024 year -->
 <h4>2024</h4>
 <ol start="1">
-    <li>Lizhu Xiong, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://"><strong><font color= "#00066f">TKGR-GPRSCL: Enhance Temporal Knowledge Graph Reasoning with Graph Structure-Aware Path Representation and Supervised Contrastive Learning</font></strong></a>. The 13th CCF International Conference on Natural Language Processing and Chinese Computing (NLPCC). Hangzhou (<a href="http://tcci.ccf.org.cn/conference/2024/"><strong><u><font color="#874e26">NLPCC-24</font></u></strong></a>). China, November 1-3, 2024. (CCF-C)
+    <li>Lizhu Xiong, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://link.springer.com/chapter/10.1007/978-981-97-9434-8_16"><strong><font color= "#00066f">TKGR-GPRSCL: Enhance Temporal Knowledge Graph Reasoning with Graph Structure-Aware Path Representation and Supervised Contrastive Learning</font></strong></a>. The 13th CCF International Conference on Natural Language Processing and Chinese Computing (NLPCC). Hangzhou (<a href="http://tcci.ccf.org.cn/conference/2024/"><strong><u><font color="#874e26">NLPCC-24</font></u></strong></a>). China, November 1-3, 2024. (CCF-C)
 </ol>
 
 
