--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -4055,8 +4055,16 @@ ChatGPT:
     <!-- 2024.10.02 -->
     <a href="https://mp.weixin.qq.com/s/nfZNZA54zG_knA2_6vidLA" target="_blank">OpenAI 开发者大会！实时语音功能有API了，GPT-4o支持多模态微调，上下文cache功能上线</a>
     |
-    <!-- 2024.10.03 -->
-    <a href="https://mp.weixin.qq.com/s/49iHliH-3CTe203MmXrW-Q" target="_blank">破纪录！OpenAI成为史上第一家估值万亿元的AI公司！独家融资协议：“别投对手公司”</a>
+    <!-- 2024.10.22 -->
+    <a href="https://" target="_blank">破纪录！</a>
+    |
+    <!-- 2024.10.23 -->
+    <a href="https://mp.weixin.qq.com/s/BZbDpE6819jCTgw0zwvXDQ" target="_blank">Claude 3.5 Sonnet升级！Haiku也来了！开发者可以率先使用「AI操控电脑」新功能</a>
+    |
+    <!-- 2024.10.23 -->
+    <a href="https://mp.weixin.qq.com/s/BZbDpE6819jCTgw0zwvXDQ" target="_blank">Claude 3.5 Sonnet升级！Haiku也来了！开发者可以率先使用「AI操控电脑」新功能</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/GDHuLQhja9T3E7cpRpRY_Q" target="_blank">Stable Diffusion 3.5最强模型全家桶来了，三个型号</a>
     |
     <!-- 2024.10.24 -->
     <a href="https://mp.weixin.qq.com/s/pl-8KFXN7z_JM2EdGKUHQQ" target="_blank">Character AI被起诉！14岁青少年自杀，AI陪伴何去何从</a>
@@ -4073,6 +4081,12 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/jKYCy8fqM2XdeECefBripg" target="_blank">LLM等价于众包，只是在输出「网络共识」！哈佛大学最新报告深挖大模型幻觉！</a>
     |
+    <!-- 2024.10.29 -->
+    <a href="https://mp.weixin.qq.com/s/FB43mG6xGbFgLDllXbgyJA" target="_blank">LeCun锐评诺奖：出于压力才颁给AI，但获奖成果已完全无用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/FB43mG6xGbFgLDllXbgyJA" target="_blank">至高 1.8 倍无损加速！互补量化方案的投机加速</a>
+    |
+    
 
 </br>
 </br>
@@ -5939,7 +5953,9 @@ Information Theoretic Field:
 Human-computer Interaction Field：
 <br />
     <a href="https://pi.cs.tsinghua.edu.cn/people/#faculty" target="_blank">Yuanchun Shi</a>
-    |       
+    |
+    <a href="https://yuhanlolo.github.io/me/index.html" target="_blank">Yuhan Luo</a>
+    |         
   <br />
   <br />
 Brain Computer Interfaces (BCI) Field：
