--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@ Check out Sheng's up-to-date CV for more details.
   <a href="https://www.ccf.org.cn/c/2019-07-31/667605.shtml" target="_blank">中国计算机学会推荐中文科技期刊目录</a>
 <!--  <br /> -->
   |
+  <a href="https://mp.weixin.qq.com/s/p7hxepzsIcoizHrJ9OIjZg" target="_blank">中国科技期刊卓越行动计划二期拟入选项目公示</a>
+<!--  <br /> -->
+  |
   <a href="https://mp.weixin.qq.com/s/H_wiuQ_6-RIeUxFcFUMPNQ" target="_blank">中国自动化学会推荐的A类和B类学术期刊目录 (包含国产和外文)</a>
 <!--  <br /> -->
   |
