--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -233,13 +233,13 @@
     |   
     <a href="" target="_blank">ISWC</a>
     |
-    <a href="" target="_blank">LREC-COLING</a>
+    <a href="https://coling2025.org/" target="_blank">COLING</a>
     |
     <a href="https://ecmlpkdd.org/2025/" target="_blank">ECML-PKDD</a>
     |
     <a href="https://2025.ieeeicme.org/" target="_blank">ICME</a>
     |
-    <a href="" target="_blank">ICMR</a>
+    <a href="https://www.icmr-2025.org/" target="_blank">ICMR</a>
     |
     <a href="https://2025.ijcnn.org/" target="_blank">IJCNN</a>
     |
@@ -4086,7 +4086,9 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/FB43mG6xGbFgLDllXbgyJA" target="_blank">至高 1.8 倍无损加速！互补量化方案的投机加速</a>
     |
-    
+    <!-- 2024.11.05 -->
+    <a href="https://" target="_blank">LeCun</a>
+    |
 
 </br>
 </br>
