--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -231,7 +231,7 @@
     |
     <a href="" target="_blank">NAACL</a>
     |   
-    <a href="" target="_blank">ISWC</a>
+    <a href="https://iswc2025.semanticweb.org/" target="_blank">ISWC</a>
     |
     <a href="https://coling2025.org/" target="_blank">COLING</a>
     |
@@ -4088,6 +4088,11 @@ ChatGPT:
     |
     <!-- 2024.11.05 -->
     <a href="https://" target="_blank">LeCun</a>
+    |
+    <!-- 2024.11.13 -->
+    <a href="https://mp.weixin.qq.com/s/i0dTLDrEEznh4gn8cSsgEw" target="_blank">Ilya承认Scaling Law到头了，Meta和谷歌寻找替代o1的方法</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/BRCh8TlzOM6UmLN5CZ2LTg" target="_blank">OpenAI总裁Greg终于归来！每周狂肝100小时代码</a>
     |
 
 </br>
