--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -183,6 +183,10 @@
     border-left: 5px solid #0084f2;">Accepted Top-tier Papers</h3>
 
 <br />
+<h4>2027</h4>
+<br/>
+
+<br />
 <h4>2026</h4>
 <br/>
 
@@ -193,7 +197,7 @@
     <a href="" target="_blank">ICC</a>
     |
 <!-- AI - A -->
-    <a href="" target="_blank">IJCAI</a>
+    <a href="https://2025.ijcai.org/" target="_blank">IJCAI</a>
     |
 <!-- Hybrid - A -->
     <a href="https://www2025.org/" target="_blank">The Web Conference</a>
@@ -210,7 +214,7 @@
     |
     <a href="" target="_blank">ACM SIGMOD</a>
     |
-    <a href="" target="_blank">VLDB</a>
+    <a href="https://vldb.org/2025/" target="_blank">VLDB</a>
     |
 <!-- Multimedia - A-->
     <a href="" target="_blank">ACM Multimedia</a>
@@ -222,6 +226,8 @@
     |
 <!-- visualization - A-->
     <a href="" target="_blank">CHI</a>
+    |
+    <a href="" target="_blank">IEEE Visualization Conference</a>
     |
 <!-- network - B -->
     <a href="" target="_blank">ICDCS</a>
@@ -335,16 +341,23 @@
 <!-- information system - C-->
     <a href="" target="_blank">WISE</a>
     |
+<!-- computer animation - C-->
+    <a href="https://casa2025.sciencesconf.org/?lang=en" target="_blank">CASA</a>
+    |
 <!-- Computational Linguistics -->
     <a href="" target="_blank">AACL</a>
     |
-    <a href="" target="_blank">CCL</a>
+    <a href="http://cips-cl.org/static/CCL2025/cclEssay/notice/index.html" target="_blank">CCL</a>
     |
     <a href="" target="_blank">CCKS</a>
     |
     <a href="" target="_blank">CCIR</a>
     |
-    <a href="" target="_blank">ICWSM</a>
+    <a href="" target="_blank">SMP</a>
+    |
+    <a href="http://wasa-conference.org/WASA2025/" target="_blank">WASA</a>
+    |
+    <a href="https://www.icwsm.org/2024/" target="_blank">ICWSM</a>
     |
 <!-- Multimedia Learning -->
     <a href="" target="_blank">ACM Multimedia Asia</a>
@@ -491,7 +504,7 @@
     |
     <a href="https://2024.eswc-conferences.org/" target="_blank">ESWC</a>
     |
-    <a href="" target="_blank">PRICAI</a>
+    <a href="https://pricai.org/2024/" target="_blank">PRICAI</a>
     |
 <!-- software engineering - C-->
     <a href="https://ksiresearch.org/seke/seke24.html" target="_blank">SEKE</a>
